finish tests with law tests

--- a/aeson-possible.cabal
+++ b/aeson-possible.cabal
@@ -18,6 +18,8 @@ common extensions
     default-extensions:
       DeriveFunctor
       DeriveGeneric
+      DerivingVia
+      GeneralizedNewtypeDeriving
       OverloadedStrings
 
 common warnings
