--- a/aeson-possible.cabal
+++ b/aeson-possible.cabal
@@ -40,7 +40,7 @@ library
     exposed-modules:  Data.Aeson.Possible
     -- other-modules:
     -- other-extensions:
-    build-depends:    base ^>=4.17.2.0,
+    build-depends:    base >= 4.17 && < 5,
                       aeson == 2.2.*,
     hs-source-dirs:   src
     default-language: Haskell2010
@@ -55,7 +55,7 @@ test-suite aeson-possible-test
     hs-source-dirs:   test
     main-is:          Main.hs
     build-depends:
-        base ^>=4.17.2.0,
+        base >= 4.17 && < 5,
         aeson-possible,
         aeson,
         tasty == 1.*,
