remove -Weverything, not sustainable for a library

--- a/aeson-possible.cabal
+++ b/aeson-possible.cabal
@@ -26,16 +26,7 @@ common extensions
       OverloadedStrings
 
 common warnings
-    ghc-options:
-      -Weverything
-      -Wno-unsafe
-      -Wno-implicit-prelude
-      -Wno-missing-import-lists
-      -Wno-missing-safe-haskell-mode
-      -Wno-missing-kind-signatures
-      -Wno-missing-local-signatures
-      -Wno-monomorphism-restriction
-      -Wno-all-missed-specialisations
+    ghc-options: -Wall
 
 library
     import:           extensions
