add haskell-actions/run-fourmolu to ci-haskell.yml

--- a/.github/workflows/ci-haskell.yml
+++ b/.github/workflows/ci-haskell.yml
@@ -17,6 +17,15 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  check-format:
+    name: fourmolu check
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: haskell-actions/run-fourmolu@v9
+        with:
+          version: "0.14.0.0"
+
   build:
     name: GHC ${{ matrix.ghc-version }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
