--- a/aeson-possible.cabal
+++ b/aeson-possible.cabal
@@ -11,7 +11,7 @@ author:             Jonathan Jouty
 maintainer:         Jonathan Jouty <me@jonathanjouty.com>
 category:           Data, Web, JSON
 build-type:         Simple
-extra-doc-files:    CHANGELOG.md
+extra-doc-files:    CHANGELOG.md, README.md
 tested-with:
   GHC == 9.4
    || == 9.6
